--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ incremental: false
 highlighter: rouge
 gist:
   noscript: false
+markdown: kramdown
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-  
