--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ markdown: kramdown
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
-theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
